--- a/Kurzusok/Kurzusok/Views/Home/_CourseModalEditPartial.cshtml
+++ b/Kurzusok/Kurzusok/Views/Home/_CourseModalEditPartial.cshtml
@@ -110,7 +110,7 @@
                     </div>
                     <div class="form-group">
                         <label asp-for="CourseCode">Kurzus kód</label>
-                        <input asp-for="CourseCode" class="form-control" min="0" required />
+                        <input asp-for="CourseCode" class="form-control" required />
                         <span asp-validation-for="CourseCode" class="text-danger"></span>
                     </div>
                     <div class="form-group">
