--- a/Kurzusok/Kurzusok/Views/Teachers/_EditTeacherModalPartial.cshtml
+++ b/Kurzusok/Kurzusok/Views/Teachers/_EditTeacherModalPartial.cshtml
@@ -1,5 +1,5 @@
 ﻿@model Teachers
-<div class="modal editteachermodal" id="editTeacher">
+<div class="modal fade editteachermodal" id="editTeacher">
     <div class="modal-dialog">
         <form asp-action="EditTeacherPost" onsubmit="return ajaxpostBasic(this);">
             <div class="modal-content">
