--- a/Kurzusok/Kurzusok/Views/Teachers/_TeacherBackModalPartial.cshtml
+++ b/Kurzusok/Kurzusok/Views/Teachers/_TeacherBackModalPartial.cshtml
@@ -1,4 +1,4 @@
-﻿<div class="modal teacherbackmodal" id="teacherBack" >
+﻿<div class="modal fade teacherbackmodal" id="teacherBack" >
     <div class="modal-dialog">
         <form asp-action="TeacherBackPost" onsubmit="return ajaxpostBasic(this);">
             <div class="modal-content">
