--- a/Kurzusok/Kurzusok/Views/Teachers/_TeacherLeftModalPartial.cshtml
+++ b/Kurzusok/Kurzusok/Views/Teachers/_TeacherLeftModalPartial.cshtml
@@ -1,4 +1,4 @@
-﻿<div class="modal teacherleftmodal" id="teacherLeft" >
+﻿<div class="modal fade teacherleftmodal" id="teacherLeft" tabindex="-1" role="dialog" aria-labelledby="applySubjectDelete" aria-hidden="true" >
     <div class="modal-dialog">
         <form asp-action="TeacherLeftPost" onsubmit="return ajaxpostBasic(this);">
             <div class="modal-content">
