--- a/Kurzusok/Kurzusok/Views/Teachers/_TeacherModalPartial.cshtml
+++ b/Kurzusok/Kurzusok/Views/Teachers/_TeacherModalPartial.cshtml
@@ -1,5 +1,5 @@
 ﻿@model Teachers
-<div class="modal addteachermodal" id="addTeacher">
+<div class="modal fade addteachermodal" id="addTeacher">
     <div class="modal-dialog">
         <form asp-action="AddTeacherPost" onsubmit="return ajaxpostBasic(this);">
             <div class="modal-content">
