--- a/Kurzusok/Kurzusok/wwwroot/css/sidebar.css
+++ b/Kurzusok/Kurzusok/wwwroot/css/sidebar.css
@@ -26,6 +26,7 @@
         height: 40px;
         line-height: 40px;
     }
+
         #opened > .height > .dropdown-menu {
             line-height: 20px;
         }
@@ -46,13 +47,6 @@
         padding-left: 20px;
     }
 
-    .nav-sidebar > .active > a,
-    .nav-sidebar > .active > a:hover,
-    .nav-sidebar > .active > a:focus {
-        color: rgba(0, 0, 0, 0.9);
-        background-color: #cfd9db;
-    }
-
     .nav-sidebar .dropdown-menu > a:hover {
         text-decoration: underline !important;
     }
@@ -60,6 +54,11 @@
     .nav-sidebar > .nav-item > a {
         cursor: pointer;
     }
+
 .sidebar .fas {
     color: #7b8a8b !important;
+}
+
+.nav-sidebar > .nav-item > button:hover {
+    color: #576263 !important;
 }
