--- a/Kurzusok/Kurzusok/Views/Home/_CourseModalEditPartial.cshtml
+++ b/Kurzusok/Kurzusok/Views/Home/_CourseModalEditPartial.cshtml
@@ -153,7 +153,7 @@
                                 <div class="col-6">
                                     <select class="custom-select" name="Teachers">
 
-                                        @foreach (var teacher in teachers)
+                                        @foreach (var teacher in teachers.OrderBy(b => b.Name))
                                         {
                                             if (item.TeacherId == teacher.TeacherId)
                                             {
