--- a/Kurzusok/Kurzusok/Views/Home/_SubjectModalPartial.cshtml
+++ b/Kurzusok/Kurzusok/Views/Home/_SubjectModalPartial.cshtml
@@ -8,6 +8,10 @@
         training = "Nappali";
         Context.Session.SetString("Training", "Nappali");
     }
+    else if (training == "Levelezos")
+    {
+        training = "Levelezős";
+    }
 }
 
 <div class="modal subjectmodal" id="addSubject">
