--- a/Kurzusok/Kurzusok/Views/Shared/_Layout.cshtml
+++ b/Kurzusok/Kurzusok/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
                         @if (User.IsInRole("Admin"))
                         {
                             <li class="nav-item">
-                                <a class="nav-link" asp-area="" asp-controller="Teachers" asp-action="Index">Statisztika</a>
+                                <a class="nav-link" asp-area="" asp-controller="Teachers" asp-action="Index">Oktatók</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" asp-area="" asp-controller="Administration" asp-action="Index">Adminisztráció</a>
