--- a/Kurzusok/Kurzusok/Areas/Identity/Pages/Account/ConfirmEmail.cshtml
+++ b/Kurzusok/Kurzusok/Areas/Identity/Pages/Account/ConfirmEmail.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model ConfirmEmailModel
 @{
-    ViewData["Title"] = "Confirm email";
+    ViewData["Title"] = "Email megerősítése";
 }
 
 <h1>@ViewData["Title"]</h1>
