--- a/Kurzusok/Kurzusok/Areas/Identity/Pages/Account/ConfirmEmailChange.cshtml
+++ b/Kurzusok/Kurzusok/Areas/Identity/Pages/Account/ConfirmEmailChange.cshtml
@@ -1,7 +1,7 @@
-﻿@page
+﻿@page "/Account/EmailChangeConfirmation"
 @model ConfirmEmailChangeModel
 @{
-    ViewData["Title"] = "Confirm email change";
+    ViewData["Title"] = "Email változtatás megerősítése";
 }
 
 <h1>@ViewData["Title"]</h1>
