--- a/Kurzusok/Kurzusok/Views/Home/_CourseModalPartial.cshtml
+++ b/Kurzusok/Kurzusok/Views/Home/_CourseModalPartial.cshtml
@@ -84,7 +84,7 @@
                         <div class="row form-group copyThisDiv">
                             <div class="col-6">
                                 <select class="custom-select" name="Teachers">
-                                    @foreach (var item in teachers)
+                                    @foreach (var item in teachers.OrderBy(b=>b.Name))
                                     {
                                         if (item.IsWorking)
                                         {
