--- a/Kurzusok/Kurzusok/Views/Administration/EditUserRole.cshtml
+++ b/Kurzusok/Kurzusok/Views/Administration/EditUserRole.cshtml
@@ -16,12 +16,27 @@
             @for (int i = 0; i < Model.Count; i++)
             {
             <div class="form-check">
-                <input type="hidden" asp-for="@Model[i].UserId" />
-                <input type="hidden" asp-for="@Model[i].UserName" />
-                <input asp-for="@Model[i].Selected" class="form-check-input" />
-                <label asp-for="@Model[i].Selected" class="form-check-label">
-                    @Model[i].UserName
-                </label>
+
+                @if (User.Identity.Name== Model[i].UserName&&roleName=="Admin")
+                {
+                    <input type="hidden" asp-for="@Model[i].UserId" />
+                    <input type="hidden" asp-for="@Model[i].UserName" />
+                    <input asp-for="@Model[i].Selected" class="form-check-input" disabled/>
+                    <input type="hidden" asp-for="@Model[i].Selected" class="form-check-input" />
+                    <label asp-for="@Model[i].Selected" class="form-check-label">
+                        @Model[i].UserName
+                    </label>
+                }
+                else
+                {
+                    <input type="hidden" asp-for="@Model[i].UserId" />
+                    <input type="hidden" asp-for="@Model[i].UserName" />
+                    <input asp-for="@Model[i].Selected" class="form-check-input" />
+                    <label asp-for="@Model[i].Selected" class="form-check-label">
+                        @Model[i].UserName
+                    </label>
+                }
+
             </div>
             }
 
