Added active links

--- a/Kurzusok/Kurzusok/Views/Administration/Index.cshtml
+++ b/Kurzusok/Kurzusok/Views/Administration/Index.cshtml
@@ -3,6 +3,7 @@
 @{;
     ViewData["Title"] = "Felhasználói szintek";
     Layout = "/Views/Administration/_AdminLayout.cshtml";
+    ViewData["Active"] = "Edit";
 }
 <div class="w-80 row">
     @if (Model.Any())
