--- a/Kurzusok/Kurzusok/Views/Administration/RegisterAccount.cshtml
+++ b/Kurzusok/Kurzusok/Views/Administration/RegisterAccount.cshtml
@@ -2,6 +2,7 @@
 @{
     Layout = "/Views/Administration/_AdminLayout.cshtml";
     ViewData["Title"] = "Regisztrálás";
+    ViewData["Active"] = "Register";
 }
 <div class="w-50">
     <form asp-controller="Administration" asp-action="RegisterPost" class="form-signin" method="post">
