--- a/Kurzusok/Kurzusok/Views/Administration/DeleteAccounts.cshtml
+++ b/Kurzusok/Kurzusok/Views/Administration/DeleteAccounts.cshtml
@@ -4,6 +4,7 @@
 @{;
     ViewData["Title"] = "Felhasználók törlése";
     Layout = "/Views/Administration/_AdminLayout.cshtml";
+    ViewData["Active"] = "Delete";
 }
 <div class="modal fade accountdeletemodal" id="deleteAccount" tabindex="-1" role="dialog" aria-labelledby="deleteAccount" aria-hidden="true">
     <div class="modal-dialog" role="document">
